# bachtrackapi

./: .gitignore  CHANGES.md  LICENSE  MANIFEST.in  README.md  TESTING_SUMMARY.md  deployinstructions.md  inspect_page.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
api/: main.py
api/routes/: events.py
api/services/: opera_service.py
bachtrackapi/: __init__.py
bachtrackapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bachtrackapi/backend/: __init__.py  main.py
bachtrackapi/backend/models/: event.py
bachtrackapi/backend/routes/: events.py
bachtrackapi/backend/services/: opera_service.py
bachtrackapi/scraper/: scraper.py
notebook/: test_scraper.ipynb
scraper/: __init__.py
scrapers/bachtrack/: __init__.py
tests/: test_api.py  test_api_v2.py  test_datetime.py  test_freetext.py  test_scraper.py
